--- a/Phoenix.ipynb
+++ b/Phoenix.ipynb
@@ -95,13 +95,13 @@
    "source": [
     "# Data Understanding\n",
     "The dataset contains the following columns:\n",
-    "- Age: Age of the patient (in years)\n",
-    "- BMI: Body Mass Index\n",
-    "- Blood Pressure: Average blood pressure reading\n",
-    "- Glucose Level: Fasting blood glucose\n",
-    "- Insulin Level: Fasting insulin level\n",
-    "- Physical Activity Score: Categorical score from 1 (low activity) to 9 (high activity)\n",
-    "- Diabetes: Target variable (Yes/No)"
+    "- `Age`: Age of the patient (in years)\n",
+    "- `BMI`: Body Mass Index\n",
+    "- `Blood Pressure`: Average blood pressure reading\n",
+    "- `Glucose Level`: Fasting blood glucose\n",
+    "- `Insulin Level`: Fasting insulin level\n",
+    "- `Physical Activity Score`: Categorical score from 1 (low activity) to 9 (high activity)\n",
+    "- `Diabetes`: Target variable (Yes/No)"
    ]
   },
   {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 166,
    "id": "98770f9f",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 167,
    "id": "d39efb5e",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
        "4                        4       No  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 168,
    "id": "8f4d2d4d",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 169,
    "id": "ef3498d4",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
        "max                   9.000000  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 170,
    "id": "f4f45c6b",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 171,
    "id": "d815ac1b",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 172,
    "id": "55f24e8e",
    "metadata": {},
    "outputs": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 173,
    "id": "dde4a55c",
    "metadata": {},
    "outputs": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 174,
    "id": "0a6e165e",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 175,
    "id": "9f9f8899",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 176,
    "id": "c95ffe03",
    "metadata": {},
    "outputs": [],
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 177,
    "id": "20d110a9",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 178,
    "id": "0e5754bb",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 179,
    "id": "bc1d51ba",
    "metadata": {},
    "outputs": [],
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 180,
    "id": "97bf72ef",
    "metadata": {},
    "outputs": [],
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 181,
    "id": "35119214",
    "metadata": {},
    "outputs": [],
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 182,
    "id": "000cec71",
    "metadata": {},
    "outputs": [],
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 183,
    "id": "03e9eec2",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1123,7 @@
        "38                       False  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 184,
    "id": "e6678274",
    "metadata": {},
    "outputs": [],
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 185,
    "id": "08535bda",
    "metadata": {},
    "outputs": [],
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 186,
    "id": "f8d44381",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 187,
    "id": "bbc28943",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 188,
    "id": "6675538a",
    "metadata": {},
    "outputs": [],
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 189,
    "id": "b47ee3fc",
    "metadata": {},
    "outputs": [],
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 190,
    "id": "43ca6231",
    "metadata": {},
    "outputs": [],
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 191,
    "id": "a2481ab1",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 192,
    "id": "688a07d7",
    "metadata": {},
    "outputs": [],
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 193,
    "id": "8aadc653",
    "metadata": {},
    "outputs": [],
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 194,
    "id": "a26c466a",
    "metadata": {},
    "outputs": [
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 195,
    "id": "8db13f64",
    "metadata": {},
    "outputs": [
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 196,
    "id": "20c2ed67",
    "metadata": {},
    "outputs": [],
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 197,
    "id": "cf34aacf",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 198,
    "id": "e972de3b",
    "metadata": {},
    "outputs": [],
@@ -1481,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 199,
    "id": "68ca54cc",
    "metadata": {},
    "outputs": [
@@ -1522,12 +1522,6 @@
     "- **Evaluation:** The evaluation metrics that were used were accuracy, precision, recall, F1 Score, and ROC AUC. However, for this domain, **Recall** and **F1 Score** are most important, as we aim to catch as many true diabetics as possible while minimizing false negatives.<br>\n",
     "- **Interpretation:**- The top identified predictors based on the best performing mode (Random Forest) were Insulin Level and Blood Pressure. <br>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0779ba02",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
