--- a/Diabetes Prediction.ipynb
+++ b/Diabetes Prediction.ipynb
@@ -1522,6 +1522,19 @@
     "- **Evaluation:** The evaluation metrics that were used were accuracy, precision, recall, F1 Score, and ROC AUC. However, for this domain, **Recall** and **F1 Score** are most important, as we aim to catch as many true diabetics as possible while minimizing false negatives.<br>\n",
     "- **Interpretation:**- The top identified predictors based on the best performing mode (Random Forest) were Insulin Level and Blood Pressure. <br>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3de5fda",
+   "metadata": {},
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "- Try advanced models (e.g., XGBoost, LightGBM)\n",
+    "- Explore SHAP values for better interpretability\n",
+    "- Deploy model using Flask or Streamlit\n",
+    "- Collect more real-world data to reduce bias"
+   ]
   }
  ],
  "metadata": {
